@@ -113,7 +113,7 @@ typedef void *psaddr_t;
 typedef elf_gregset_t prgregset_t;
 
 /* Provide dummy declaration here; we don't have FP registers. */
-typedef int prfpregset_t;
+typedef elf_fpregset_t prfpregset_t;
 
 /* We don't have any differences between processes and threads,
    therefore have only one PID type.  */
